# ECEN404-2026SP-Wireless-Real-Time-Motor-System

Custom Motor Controller/: CAMtastic2.Cam  Driver_Controller.BomDoc  Driver_Controller.PrjPcb  Driver_Controller.PrjPcbStructure  Driver_Controller.SchDoc
Microcontroller_PCB/MCU/: MCU Schematic.SchDoc.schdoc  MCU_PCB.PcbDoc.pcbdoc
Microcontroller_PCB/RF_module_Project/: PCB1.DRR  PCB1.EXTREP  PCB1.GBL  PCB1.GBS  PCB1.GG1  PCB1.GM  PCB1.GM13  PCB1.GM15  PCB1.GM16  PCB1.GM5  PCB1.GPT  PCB1.GTL  PCB1.GTO  PCB1.GTP  PCB1.GTS  PCB1.LDP  PCB1.PcbDoc  PCB1.REP  PCB1.TXT  PCB1.apr  RF_module_Project.BomDoc  RF_module_Project.PrjPcb  RF_module_Project.PrjPcbStructure  Rf schematic.SchDoc  Status Report.Txt  antenna.PcbLib  antennaS.SchLib
Power/: .gitignore  404.PrjPcbStructure  README.md
Presentations/: 404 status update 1.pptx  404 status update 2.pptx  status update 5.pptx
Test Results/: Aggressive_PI_Controller.csv  Conservative_P _Controller.csv  single_graph.py
firmware/: CMakeLists.txt  Kconfig  app.overlay  prj.conf
firmware/include/: bldc_driver.h  bluetooth.h  motor.h  motor_control.h
firmware/src/: main.c
firmware/src/bluetooth/: bluetooth.c
firmware/src/motor/: motor.c
firmware/src/motor_control/: bldc_driver.c  motor_control.c  pid.c
firmware/src/simulation/: bldc_driver_sim.c
firmware/src/watchdog/: watchdog.c
power&housing/: 404.BomDoc  404.PrjPcb  404DoublesidePCB.PcbDoc  404pcb5v.SchDoc  MCU Schematic.SchDoc  MCU_PCB.PcbDoc  component housing.SLDPRT  component housing.STL  component-housing-pt2.STL  lid-for-comphouse.STL
(+18 files in other folders)
